# Python-FTP-File-Ingestion

./: pyproject.toml
python_ingestion_job/: config.py  python_glue_injestion_job.py
