[tool.poetry]
name = "python-ftp-file-ingestion"
version = "0.1.0"
description = ""
authors = ["Bjoern Boschman <bjoern.boschman@tvsquared.com>"]

[tool.poetry.dependencies]
python = "~3.7"
boto3 = "^1.18.26"
paramiko = "2.7.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
